# nondeterministic-model-with-a-gun

./: .gitignore  Cargo.toml  LICENSE  README.md  beginDialogue.js  cli.js  conversation.js  openai.js  package-lock.json  package.json  simulationParams.js  simulations.js  transcription.js
arduino/: arduino-serial.py
arduino/basic-rc-car/: basic-rc-car.ino  connection-test.py
arduino/controller/: controller.ino
arduino/foam-cannon/: foam-cannon.ino
js-demo/: README.md  config.js  conversation.js  package-lock.json  package.json  transcription.js
js-demo/models/: readme
models/: download-base-en.sh
src/: conversation.rs  llm_api.rs  llm_interpreter.rs  main.rs  serial_output.rs  simulations.rs  transcription.rs
src/command_interpreters/: foam_cannon.rs  mod.rs  rc_car.rs
