[package]
name = "nondeterministic-model-with-a-gun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hound = "3.5.0"
reqwest = { version = "0.11", features = ["blocking", "json"]  }
whisper-rs = "0.4.0"
