[package]
name = "nondeterministic-model-with-a-gun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hound = "3.5.0"
regex = "1.7.3"
reqwest = { version = "0.11", features = ["blocking", "json"]  }
serde = { version = "1.0.159", features = ["std", "derive"] }
serde_json = "1.0.95"
serialport = "4.2.0"
whisper-rs = "0.4.0"
